Removed overflow-Y to fix dashboard issue

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,9 +15,17 @@
     supported by Chrome and Opera */
 }
 
-html, body, main { height: 100%; overflow-y: auto; }
-html { background-color: #ccc; }
-main { box-shadow: 0 0 8px rgba(0, 0, 0, 0.44); }
+html, body, main {
+    height: 100%;
+}
+
+html {
+    background-color: #ccc;
+}
+
+main {
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.44);
+}
 
 body main:not(#dashboard) {
     display: block;
@@ -38,7 +46,9 @@ header h1 {
     color: #eee;
 }
 
-header img { width: 100%; }
+header img {
+    width: 100%;
+}
 
 main {
     background: #fff;
@@ -66,7 +76,9 @@ main {
     padding: 10px 0;
 }
 
-.btn:hover { background: #ccc; }
+.btn:hover {
+    background: #ccc;
+}
 
 .btn img {
     position: absolute;
@@ -92,7 +104,9 @@ main {
     margin-top: 10px;
 }
 
-section { background-color: #fff; }
+section {
+    background-color: #fff;
+}
 
 /* Debug */
 .debug {
